--- a/app/index.html
+++ b/app/index.html
@@ -20,35 +20,45 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
     <div class="container">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
         <h3 class="text-muted">timesheet</h3>
       </div>
 
-      <div ng-view=""></div>
-
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+      <div class="panel panel-default">
+        <div class="panel-heading clearfix">
+          Week Beginning 07/07/2014 
+          <div class="pull-right">
+            <button class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-chevron-left"></span></button>
+            <button class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-chevron-right"></span></button>
+          </div>
+        </div>
+        <div class="panel-body">
+          <p>Words</p>
+        </div>
+        <table class="table" ng-controller="MainCtrl">
+          <thead>
+            <tr>
+              <th>Day</th>
+              <th>Start</th>
+              <th>Dinner</th>
+              <th>End</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Mon</td>
+              <td><input type="time" ng-model="startTime"></td>
+              <td><input type="number" min="0" placeholder="30" ng-model="dinnerLength"></td>
+              <td><input type="time" ng-model="endTime"></td>
+              <td>{{calc() | duration}}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+
     </div>
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
 
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -67,13 +77,15 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/services/moment.js"></script>
+    <script src="scripts/filters/duration.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
